--- a/src/main/html/css/screen.css
+++ b/src/main/html/css/screen.css
@@ -1229,6 +1229,14 @@
 .swagger-section .api-popup-actions {
   padding-top: 10px;
 }
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #f0f0f0;
+}
+p {
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+}
 .swagger-section .access {
   float: right;
 }
@@ -1296,11 +1304,8 @@
   cursor: pointer;
 }
 .swagger-section #header {
-  background-color: #89bf04;
+  background-color: #fafafa;
   padding: 14px;
-}
-.swagger-section #input_baseUrl {
-  width: 400px;
 }
 .swagger-section #api_selector {
   display: block;
@@ -1321,31 +1326,19 @@
 .swagger-section #input_apiKey {
   width: 200px;
 }
-.swagger-section #explore {
-  display: block;
-  text-decoration: none;
-  font-weight: bold;
-  padding: 6px 8px;
-  font-size: 0.9em;
-  color: white;
-  background-color: #547f00;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -o-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -khtml-border-radius: 4px;
-  border-radius: 4px;
-}
-.swagger-section #explore:hover {
-  background-color: #547f00;
-}
 .swagger-section #header #logo {
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1.5em;
   font-weight: bold;
   text-decoration: none;
-  background: transparent url(../images/logo_small.png) no-repeat left center;
-  padding: 20px 0 20px 40px;
-  color: white;
+  padding: 25px 0 25px 90px;
+  margin: 10px;
+  color: #444;
+}
+.swagger-section div.logo {
+  margin-left: 20px;
+  float: left;
+  width: 120px;
 }
 .swagger-section #content_message {
   margin: 10px 15px;
