--- a/src/main/less/screen.less
+++ b/src/main/less/screen.less
@@ -4,6 +4,16 @@
 @import 'src/main/less/specs.less';
 @import 'src/main/less/auth.less';
 
+body {
+        margin: 0;
+        padding: 0;
+        background-color: #f0f0f0;
+}
+
+p {
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+}
+
 .swagger-section {
 
   .access { float: right; }
@@ -76,11 +86,11 @@
   }
 
   #header {
-    background-color: #89bf04;
+    background-color: #fafafa;
     padding: 14px;
   }
 
-  #input_baseUrl { width: 400px; }
+  // #input_baseUrl { width: 700px; }
 
   #api_selector {
     display: block;
@@ -103,31 +113,38 @@
 
   #input_apiKey { width: 200px; }
 
-  #explore {
-    display: block;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 6px 8px;
-    font-size: 0.9em;
-    color: white;
-    background-color: #547f00;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -o-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -khtml-border-radius: 4px;
-    border-radius: 4px;
-
-    &:hover { background-color: #547f00; }
-  }
+  // #explore {
+  //   display: block;
+  //   text-decoration: none;
+  //   font-weight: bold;
+  //   padding: 6px 8px;
+  //   font-size: 0.9em;
+  //   color: white;
+  //   background-color: #547f00;
+  //   -moz-border-radius: 4px;
+  //   -webkit-border-radius: 4px;
+  //   -o-border-radius: 4px;
+  //   -ms-border-radius: 4px;
+  //   -khtml-border-radius: 4px;
+  //   border-radius: 4px;
+  //
+  //   &:hover { background-color: #547f00; }
+  // }
 
   #header #logo {
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 1.5em;
     font-weight: bold;
     text-decoration: none;
-    background: transparent url(../images/logo_small.png) no-repeat left center;
-    padding: 20px 0 20px 40px;
-    color: white;
+    padding: 25px 0 25px 90px;
+    margin: 10px;
+    color: #444;
+  }
+
+  div.logo {
+    margin-left: 20px;
+    float: left;
+    width: 120px;
   }
 
   #content_message {
@@ -141,7 +158,7 @@
     text-align: center;
     padding-top: 10px;
   }
-  
+
   .swagger-collapse:before {
     content: "-";
   }
@@ -151,9 +168,3 @@
   }
 
 }
-
-
-
-
-
-
