--- a/src/main/less/screen.less
+++ b/src/main/less/screen.less
@@ -157,6 +157,7 @@ p {
     min-height: 30px;
     text-align: center;
     padding-top: 10px;
+    padding-bottom: 10px;
   }
 
   .swagger-collapse:before {
